# certly-folio-vault

./: .env  package-lock.json  package.json
src/: routeTree.gen.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: cert_store.rs  crypto.rs  lib.rs
src/components/certly/: CertificateList.tsx  EmailTemplateSettings.tsx  Header.tsx  SideDrawer.tsx
src/integrations/supabase/: types.ts
src/lib/: certificate-draft.ts  certificates-data.ts  local-cert-mapper.ts  tauri-certs.ts  tauri-crypto.ts
src/routes/: _authenticated.tsx  index.tsx  login.tsx
src/routes/_authenticated/: index.tsx  settings.email.tsx
supabase/: config.toml
supabase/migrations/: 20260518014901_555064b0-97d2-4da8-8bbf-81856b80451f.sql  20260519002200_7efcf1a0-d25b-429f-9d95-f671d195f39b.sql
